@@ -1,5 +1,10 @@
 2005-02-07  Roland Illig  <roland.illig@gmx.de>
 
+	* view.c: Changed type of view->blocks from int to size_t.
+	* view.c: Removed unused parameters from local functions.
+
+2005-02-07  Roland Illig  <roland.illig@gmx.de>
+
 	* ext.c: Improved message formatting.
 
 2005-02-06  Roland Illig  <roland.illig@gmx.de>
